--- a/pages/post/post.module.scss
+++ b/pages/post/post.module.scss
@@ -1,26 +1,50 @@
-
-
-
-
 .blog_detail {
-    display: flex;
-    
-    .blog_content {
+  display: flex;
+  justify-content: center;
 
-        .title {
-            font-size: 3em;
-            padding: 30px 0;
-        }
-        
-        .image_post {
-            object-fit: cover;
-            width: 100%;
-        }
-        
-        .content_description {
-            padding: 20px 0;
-            font-size: 1.3em;
-        }
-
+  .blog_content {
+    .title {
+      font-size: 3em;
+      padding: 30px 0;
     }
+
+    .image_post {
+      object-fit: cover;
+      width: 100%;
+    }
+
+    .content_description {
+      padding: 20px 0;
+      font-size: 1.3em;
+    }
+    .user {
+      padding: 20px 0px;
+      display: flex;
+      align-items: center;
+      &__avatar {
+        border-radius: 9999px;
+      }
+      &__name {
+        margin-left: 10px;
+        color: #292929;
+        font-size: 1.6rem;
+        font-weight: 600;
+      }
+      &__time {
+        margin-left: 10px !important;
+      }
+
+      &__icon {
+        width: 20px;
+        color: #1b74e4;
+        margin-left: 4px;
+      }
+    }
+
+    blockquote {
+      border-left: 3px solid var(--primary);
+      padding: 0 0 2px 20px;
+      color: #757575;
+    }
+  }
 }
