--- a/pages/core/components/blog/blog.module.scss
+++ b/pages/core/components/blog/blog.module.scss
@@ -10,6 +10,7 @@
     padding-right: 20px;
     @media screen and (max-width: 779px) {
       flex-wrap: wrap;
+      padding-right: 0px;
     }
 
     .title {
