--- a/pages/core/components/header/header.module.scss
+++ b/pages/core/components/header/header.module.scss
@@ -5,17 +5,20 @@
   align-items: center;
 
   position: sticky;
-    z-index: 100;
-    top: 0px;
-    backdrop-filter: blur(6px);
-    background-color: rgba(255, 255, 255, 0.8);
+  z-index: 100;
+  top: 0px;
+  backdrop-filter: blur(6px);
+  background-color: rgba(255, 255, 255, 0.8);
+  @media screen and (max-width: 779px) {
+    padding: 20px 5px;
+  }
 
   .logo {
     font-family: Neuropo;
     font-size: 26px;
 
     &::first-letter {
-        color:rgb(118, 0, 220);
+      color: rgb(118, 0, 220);
     }
   }
 
@@ -33,8 +36,8 @@
         padding: 10px 15px;
 
         .icon_search {
-            display: flex;
-            cursor: pointer;
+          display: flex;
+          cursor: pointer;
         }
 
         a {
@@ -65,7 +68,9 @@
         position: relative;
         background: #cdcdcd;
         border-radius: 3px;
-        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease, -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+          background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease,
+          -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
       }
 
       .openMiddle {
