--- a/pages/post/post.module.scss
+++ b/pages/post/post.module.scss
@@ -2,12 +2,19 @@
   display: flex;
   justify-content: center;
   padding: 0 150px;
+  @media screen and (max-width: 779px) {
+    padding: 0 10px;
+  }
 
 
   .blog_content {
     .title {
       font-size: 2.6em;
       padding: 30px 0;
+      @media screen and (max-width: 779px) {
+        font-size: 2.4em;
+      }
+    
     }
 
     .image_post {
@@ -23,6 +30,14 @@
         max-width: 80%;
         width: 600px;
         height: 400px;
+        object-fit: cover;
+
+        @media screen and (max-width: 779px) {
+          width: 400px;
+          height: 400px;
+          max-width: 100%;
+        }
+      
       }
     }
     .user {
