--- a/pages/post/post.module.scss
+++ b/pages/post/post.module.scss
@@ -26,15 +26,15 @@
 
       img {
         max-width: 80%;
-        width: 600px;
-        height: 400px;
+        // width: 600px;
+        // height: 400px;
         object-fit: cover;
 
         @media screen and (max-width: 779px) {
           width: 350px;
           height: 250px;
           max-width: 100%;
-          object-fit: fill;
+          object-fit: contain;
           margin: 10px 0px;
         }
       }
@@ -51,6 +51,11 @@
         font-size: 1em;
         margin: 8px 8px 0 0 !important;
         padding: 4px 10px;
+
+        @media screen and (max-width: 779px) {
+          margin-top: 10px !important;
+          display: inline-block;
+        }
       }
     }
 
