--- a/pages/post/post.module.scss
+++ b/pages/post/post.module.scss
@@ -32,7 +32,7 @@
 
         @media screen and (max-width: 779px) {
           width: 350px;
-          height: 250px;
+          // height: 250px;
           max-width: 100%;
           object-fit: contain;
           margin: 10px 0px;
