--- a/pages/blog/blog.module.scss
+++ b/pages/blog/blog.module.scss
@@ -54,7 +54,6 @@
 
     .layout {
       padding-top: 30px;
-      width: 75%;
       @media screen and (max-width: 779px) {
         flex-direction: column;
         width: 100%;
@@ -77,56 +76,82 @@
       }
 
       .list_posts {
-        display: flex;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+        gap: 2rem;
         @media screen and (max-width: 779px) {
-          padding-left: 0px;
+          // padding-left: 0px;
+          display: flex;
+          flex-wrap: wrap;
         }
 
         figure {
-          width: 33.3%;
+          border-radius: 16px;
+          margin: 20px;
+          gap: 2rem;
+          overflow: hidden;
+          display: flex;
+          position: relative;
+          isolation: isolate;
+          padding-top: 20rem;
+          padding-left: 2rem;
+          padding-right: 2rem;
           padding-bottom: 10px;
-          padding-left: 10px;
+          color:#fff;
+
           @media screen and (max-width: 779px) {
-            padding-left: 0px;
+            // padding-left: 0px;
             width: 100%;
           }
+
           img {
             width: 100%;
+            // width: 380px;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 16px;
           }
 
-      
-            .text_title {
-              padding:20px 0;
+          .text_title {
+            padding: 20px 0;
 
-              .post_link {
-                font-size: 1.2em;
-                transition: 0.3s ease-in-out;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                display: -webkit-box;
-                -webkit-box-orient: vertical;
-                -webkit-line-clamp: 3;
-            &:hover {
-              color: var(--primary);
-            }
-              }
-            }
-          
-        }
-        .post_content {
-
-          p {
-            font-size: 1.2em;
+            .post_link {
+              font-size: 1.2em;
+              transition: 0.3s ease-in-out;
               overflow: hidden;
               text-overflow: ellipsis;
               display: -webkit-box;
               -webkit-box-orient: vertical;
               -webkit-line-clamp: 3;
+              &:hover {
+                // color: var(--primary);
+                opacity: 0.8;
+              }
+            }
+          }
+          .blackbox {
+            position: absolute;
+            inset: 0;
+            z-index: -1;
+            background-image: linear-gradient(
+              to top,
+              #111827,
+              rgb(17 24 39 / 0.4),
+              rgb(17 24 39 / 0)
+            );
           }
         }
-
+        .post_content {
         
+          p {
+            font-size: 1.2em;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 3;
+          }
+        }
       }
     }
   }
