--- a/pages/core/components/banner/banner.module.scss
+++ b/pages/core/components/banner/banner.module.scss
@@ -1,18 +1,18 @@
 
-.banner {
-    padding:150px;
-    background-image: url("../../images/background-lenodev-banner.webp");
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+// .banner {
+//     padding:150px;
+//     background-image: url("../../images/background-lenodev-banner.webp");
+//     background-repeat: no-repeat;
+//     background-size: cover;
+//     position: relative;
 
-    .title {
-        position: absolute;
-        bottom: 50%;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 100%;
-        text-align: center;
-        color:#fff;
-    }
-}
+//     .title {
+//         position: absolute;
+//         bottom: 50%;
+//         left: 50%;
+//         transform: translateX(-50%);
+//         width: 100%;
+//         text-align: center;
+//         color:#fff;
+//     }
+// }
