--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,8 +8,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* font-family: "Poppins"; */
+  font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-size: 18px;
 }
 
 a {
@@ -21,9 +22,9 @@ a {
   box-sizing: border-box;
 }
 
-ul,li,p,h1,h2,h3,h4,h5,h6, a ,figure {
+/* ul,li,p,h1,h2,h3,h4,h5,h6, a ,figure {
   margin: 0 !important;
-}
+} */
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -48,4 +49,11 @@ ul,li,p,h1,h2,h3,h4,h5,h6, a ,figure {
 
 img {
   position: relative !important;
+}
+.h-7 {
+  height: 1.75rem;
+  width: auto;
+}
+.fill-\[\#24221B\] {
+  fill: #24221b;
 }
