--- a/pages/post/post.module.scss
+++ b/pages/post/post.module.scss
@@ -7,9 +7,10 @@
   }
 
   .blog_content {
-    .title {
+    h1 {
       font-size: 2.6em;
       padding: 30px 0;
+      font-weight: 700;
       @media screen and (max-width: 779px) {
         font-size: 2.4em;
       }
