--- a/pages/post/post.module.scss
+++ b/pages/post/post.module.scss
@@ -15,6 +15,14 @@
         font-size: 2.4em;
       }
     }
+    h2 {
+      font-size: 1.4em;
+    font-weight: 600;
+    }
+    h3 {
+      font-size: 1.2em;
+    font-weight: 600;
+    }
 
     .image_post {
       object-fit: cover;
