--- a/pages/post/post.module.scss
+++ b/pages/post/post.module.scss
@@ -15,14 +15,6 @@
         font-size: 2.4em;
       }
     }
-    h2 {
-      font-size: 1.4em;
-    font-weight: 600;
-    }
-    h3 {
-      font-size: 1.2em;
-    font-weight: 600;
-    }
 
     .image_post {
       object-fit: cover;
@@ -31,8 +23,15 @@
 
     .content_description {
       padding: 20px 0;
-      font-size: 1.3em;
-
+      // font-size: 1.3em;
+      h2 {
+        font-size: 1.4em;
+        font-weight: 600;
+      }
+      h3 {
+        font-size: 1.2em;
+        font-weight: 600;
+      }
       img {
         max-width: 80%;
         // width: 600px;
