--- a/pages/post/post.module.scss
+++ b/pages/post/post.module.scss
@@ -32,15 +32,17 @@
         font-size: 1.2em;
         font-weight: 600;
       }
+
+      ul {
+        list-style: unset !important;
+        padding-left: 45px !important ;
+      }
       img {
         max-width: 80%;
-        // width: 600px;
-        // height: 400px;
         object-fit: cover;
 
         @media screen and (max-width: 779px) {
           width: 350px;
-          // height: 250px;
           max-width: 100%;
           object-fit: contain;
           margin: 10px 0px;
@@ -54,20 +56,6 @@
         padding: 10px;
         border-radius: 5px;
         position: relative;
-        // &:hover {
-        //   transition: all 0.4s linear;
-        //   &::before {
-        //     position: absolute;
-        //     content: "Copy";
-        //     color: #fff;
-        //     background: black;
-        //     right: 20px;
-        //     top: 50%;
-        //     transform: translateY(-50%);
-        //     padding: 5px;
-        //     cursor: pointer;
-        //   }
-        // }
       }
     }
 
