--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,14 +50,30 @@ a {
 img {
   position: relative !important;
 }
+.icon-logo_svg__h-7 {
+  height: 1.75rem;
+  width: auto;
+}
+
 .h-7 {
   height: 1.75rem;
   width: auto;
 }
-.fill-\[\#24221B\] {
+.icon-logo_svg__fill-\[\#24221B\] {
   fill: #24221b;
 }
-ul {
+/* ul {
   list-style: unset !important;
    padding-left: 45px !important ; 
+} */
+
+.openMiddle {
+  opacity: 0;
+}
+
+.openTop {
+  transform: rotate(45deg) translate(40%, 50%);
+}
+.openBottom {
+  transform: rotate(-45deg) translate(10px, 0);
 }
