--- a/pages/post/post.module.scss
+++ b/pages/post/post.module.scss
@@ -1,6 +1,6 @@
 .blog_detail {
-  display: flex;
-  justify-content: center;
+  // display: flex;
+  // justify-content: center;
   padding: 0 150px;
   @media screen and (max-width: 779px) {
     padding: 0 10px;
@@ -56,6 +56,7 @@
         padding: 10px;
         border-radius: 5px;
         position: relative;
+        overflow-x: auto;
       }
     }
 
